# ai-tomator

./: .gitignore  Dockerfile  README.md  compose.build.yaml  compose.dev.yaml  compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml  pr-docker-build.yml  release-docker-images.yml  release-docker.yml  tests.yml
bruno/ai-tomator api/: opencollection.yml
bruno/ai-tomator api/authentication/: login.yml
bruno/ai-tomator api/batches/: create_batch.yml  get_logs.yml  list_batches.yml
frontend/: index.html  nginx.conf  package-lock.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: batches.ts  endpoints.ts  files.ts
frontend/src/types/: Batch.ts  BatchFile.ts  Endpoint.ts  FileData.ts  Prompt.ts
src/ai_tomator/: __main__.py  app.py  config.py  logger_config.py  main.py  tasks.py  worker.py
src/ai_tomator/celery/: worker.py
src/ai_tomator/core/: engine_manager.py  exceptions.py  file_reader.py
src/ai_tomator/manager/: batch_manager.py  endpoint_manager.py  file_manager.py
src/ai_tomator/service/: batch_service.py  endpoint_service.py  export_service.py  file_service.py  jwt_authenticator.py  login_service.py  price_service.py  prompt_service.py  user_service.py
tests/api-e2e/: conftest.py  test_main_flow.py  test_prompt_api.py
tests/core/: test_engine_manager.py  test_file_reader.py
tests/e2e/: batch_run_flow_test.py  batch_test.py  conftest.py  endpoint_test.py  file_test.py
tests/manager/: test_file_manager.py
tests/service/: test_batch_service.py  test_file_service.py
tests/webui-e2e/: test_ui.py
(+165 files in other folders)
