[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-tomator"
version = "0.1.0"
description = "Automated evaluation of files via various AI APIs"
authors = [{ name = "Ben Kathöfer", email = "benjino@posteo.de" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-multipart",
    "openai",
    "google-genai",
    "PyPDF2",
    "PyMuPDF",
    "openpyxl",
    "pandas",
    "sqlalchemy",
    "tiktoken",
    "ollama"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-mock",
    "httpx",
    "black",
    "ruff",
    "playwright",
    "pytest-playwright",
]

[tool.setuptools.package-data]
"ai_tomator" = ["webui/**/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=ai_tomator --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = ["E501"]
